# krisc32

./: .gitignore  Makefile  arch.txt  kemu  main.c  spec.txt
assembler/: CMakeLists.txt  test.asm
assembler/src/: main.c
emulator/: CMakeLists.txt  cpu.c  kemu  main.c
emulator/include/: cpu.h
emulator/src/: main.c
include/: common.h  cpu.h
linker/: CMakeLists.txt
linker/src/: main.c
test/: compile.bat  compile.sh  output.txt  run.bat  run.sh  test.asm
